--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -13,12 +13,25 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <fragment
-        android:id="@+id/fragment_movie_list"
-        android:name="com.krishna.popularmoviesstage2.FragmentActivityMain"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        tools:layout="@layout/fragment_main" />
+        android:orientation="horizontal">
 
+        <fragment
+            android:id="@+id/fragment_movie_list"
+            android:name="com.krishna.popularmoviesstage2.FragmentActivityMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_main" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5" />
+    </LinearLayout>
 </RelativeLayout>
