--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="spacing_10dp">10dp</dimen>
     <dimen name="size_20sp">20sp</dimen>
     <dimen name="size_17sp">17sp</dimen>
+    <dimen name="size_16sp">16sp</dimen>
     <dimen name="grid_view_column_width">185dp</dimen>
     <dimen name="grid_view_column_height">185dp</dimen>
 </resources>
